Manipulating DOM with fetch

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
           </div>
           <div class="activity-container">
             <div class="title-container">
-              <div class="title"><!-- <p>Work</p> --></div>
+              <div class="title"></div>
               <button class="btn-card"><span></span><span></span><span></span></button>
             </div>
-            <div class="timeframes">
+            <div class="timeframe">
               <div class="current-work">
-                <!-- <h1>32hrs</h1> -->
               </div>
               <div class="previous-work">
-                <!-- <p>Last Week - 36hrs</p> -->
               </div>
             </div>
           </div>
@@ -60,15 +58,88 @@
           </div>
           <div class="activity-container">
             <div class="title-container">
-              <div class="title"><!-- <p>Work</p> --></div>
+              <div class="title">
+              </div>
               <button class="btn-card"><span></span><span></span><span></span></button>
             </div>
-            <div class="timeframes">
+            <div class="timeframe">
               <div class="current-work">
-                <!-- <h1>32hrs</h1> -->
               </div>
               <div class="previous-work">
-                <!-- <p>Last Week - 36hrs</p> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="columns" id="column1">
+        <div class="play">
+          <div class="task-container">
+            <img class="task" src="./images/icon-work.svg">
+          </div>
+          <div class="activity-container">
+            <div class="title-container">
+              <div class="title"></div>
+              <button class="btn-card"><span></span><span></span><span></span></button>
+            </div>
+            <div class="timeframe">
+              <div class="current-work">
+              </div>
+              <div class="previous-work">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="social">
+          <div class="task-container">
+            <img class="task" src="./images/icon-exercise.svg">
+          </div>
+          <div class="activity-container">
+            <div class="title-container">
+              <div class="title">
+              </div>
+              <button class="btn-card"><span></span><span></span><span></span></button>
+            </div>
+            <div class="timeframe">
+              <div class="current-work">
+              </div>
+              <div class="previous-work">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="columns" id="column1">
+        <div class="study">
+          <div class="task-container">
+            <img class="task" src="./images/icon-work.svg">
+          </div>
+          <div class="activity-container">
+            <div class="title-container">
+              <div class="title"></div>
+              <button class="btn-card"><span></span><span></span><span></span></button>
+            </div>
+            <div class="timeframe">
+              <div class="current-work">
+              </div>
+              <div class="previous-work">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="self-care">
+          <div class="task-container">
+            <img class="task" src="./images/icon-exercise.svg">
+          </div>
+          <div class="activity-container">
+            <div class="title-container">
+              <div class="title">
+              </div>
+              <button class="btn-card"><span></span><span></span><span></span></button>
+            </div>
+            <div class="timeframe">
+              <div class="current-work">
+              </div>
+              <div class="previous-work">
               </div>
             </div>
           </div>
