--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <div class="layout">
       <div class="profile">
         <div class="top-container">
-          <div>
-            <img class="hero" src="./images/image-jeremy.png" alt="Jeremy's Picture">
-          </div>
+          <img class="hero" src="./images/image-jeremy.png" alt="Jeremy's Picture">
           <div class="profile-name">
             <p>
               Report for
@@ -74,7 +72,7 @@
       <div class="columns" id="column1">
         <div class="play">
           <div class="task-container">
-            <img class="task" src="./images/icon-work.svg">
+            <img class="task" src="./images/icon-play.svg">
           </div>
           <div class="activity-container">
             <div class="title-container">
@@ -91,7 +89,7 @@
         </div>
         <div class="social">
           <div class="task-container">
-            <img class="task" src="./images/icon-exercise.svg">
+            <img class="task" src="./images/icon-social.svg">
           </div>
           <div class="activity-container">
             <div class="title-container">
@@ -111,7 +109,7 @@
       <div class="columns" id="column1">
         <div class="study">
           <div class="task-container">
-            <img class="task" src="./images/icon-work.svg">
+            <img class="task" src="./images/icon-study.svg">
           </div>
           <div class="activity-container">
             <div class="title-container">
@@ -128,7 +126,7 @@
         </div>
         <div class="self-care">
           <div class="task-container">
-            <img class="task" src="./images/icon-exercise.svg">
+            <img class="task" src="./images/icon-self-care.svg">
           </div>
           <div class="activity-container">
             <div class="title-container">
