--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="filter">
-          <a id="daily" href="#">Daily</a>
-          <a id="weekly" href="#">Weekly</a>
-          <a id="monthly" href="#">Monthly</a>
+          <a class="btn" id="daily" href="#">Daily</a>
+          <a class="btn" id="weekly" href="#">Weekly</a>
+          <a class="btn" id="monthly" href="#">Monthly</a>
         </div>
       </div>
       <div class="columns" id="column1">
